# material-icon-embed-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: update.yml
examples/: simple.rs
src/: lib.rs  material_icon_file.rs  material_icon_folder.rs
