[package]
name = "material-icon-embed-rs"
version = "0.1.16"
edition = "2024"
authors = ["Oops418"]
description = "Material Icon Embed for Rust"
readme = "README.md"
repository = "https://github.com/Oops418/material-icon-embed-rs"
keywords = ["material-icons", "embed", "rust", "icons", "vs-code"]
license = "MIT"

[dependencies]
rust-embed = "8.7.2"

[build-dependencies]
regex = "1.11.1"
